@@ -7,6 +7,7 @@
 	- API: change rpmProblem typedef to pass by reference, not value.
 	- unify rpmError and rpmMessge interfaces through rpmlog.
 	- collect and display rpm build error messages at end of build.
+	- don't trim leading ./ in rpmCleanPath() (#14961).
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
